# autoteam2S2a

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: pow-and-anti-automation.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: InviteLayout.tsx  Layout.tsx  Select.tsx  Toast.tsx
frontend/src/components/team-manage/: OwnerDashboard.tsx  OwnerList.tsx  OwnerRow.tsx  TeamManagePagination.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  FieldLabel.tsx  HSelect.tsx  HSwitch.tsx  Modal.tsx  ProgressBar.tsx  RowItem.tsx  SectionTitle.tsx  StatCard.tsx  index.ts
frontend/src/hooks/: useApi.ts  useTheme.ts  useWebSocket.ts
frontend/src/lib/: api.ts  cache.ts  team-manage-types.ts  types.ts
frontend/src/pages/: Config.tsx  Dashboard.tsx  Invite.tsx  Logs.tsx  OwnerAudit.tsx  Proxy.tsx  Runs.tsx  Schedules.tsx  Tasks.tsx  TeamManage.tsx  Teams.tsx
frontend/src/styles/: components.css  globals.css
frontend/src/styles/pages/: proxy.css  team-manage.css
src/: config.rs  d1_cleanup.rs  db.rs  distribution.rs  email-service.rs  fingerprint.rs  iban.rs  invite.rs  log_broadcast.rs  main.rs  models.rs  proxy_pool.rs  redis_cache.rs  scheduler.rs  sentinel.rs  server.rs  services.rs  storage.rs  stripe.rs  util.rs  workflow.rs
static/: index.html  invite.html
static/assets/css/: app.css
static/assets/js/: app.js  invite.js
