[package]
name = "autoteam2s2a"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.89"
base64 = "0.22.1"
clap = { version = "4.5.41", features = ["derive"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
crossterm = "0.28"
futures = "0.3.31"
fake = "2.10.0"
rand = "0.9.2"
regex = "1.11.1"
rquest = { version = "5", features = ["cookies", "json", "gzip", "brotli", "deflate", "zstd"] }
rquest-util = "2"
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "signal", "sync"] }
toml = "0.9.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
axum = { version = "0.8", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4"] }
